crates/ml2_mem/tests/ui/memenum_no_repr.stderr
error: MemEnum requires an explicit #[repr(iN)] or #[repr(uN)]
 --> tests/ui/memenum_no_repr.rs:9:6
  |
9 | enum NoRepr {
  |      ^^^^^^
